--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 # Site settings
 title: Katie Macoy
 email: hello@katiemacoy.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: Portfolio website of Katie Macoy: American illustrator and designer based in Amsterdam.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://punnettsquaresrule.github.io/" # the base hostname & protocol for your site
 
